--- a/_includes/social-networks-links.html
+++ b/_includes/social-networks-links.html
@@ -5,7 +5,7 @@
 
   {%- if network[0] == "facebook" -%}
   <li class="list-inline-item">
-    <a href="https://www.facebook.com/{{ network[1] }}" title="Facebook">
+    <a href="https://www.facebook.com/" title="Facebook">
       <span class="fa-stack fa-lg" aria-hidden="true">
         <i class="fas fa-circle fa-stack-2x"></i>
         <i class="fab fa-facebook fa-stack-1x fa-inverse"></i>
@@ -17,7 +17,7 @@
 
   {%- if network[0] == "github" -%}
   <li class="list-inline-item">
-    <a href="https://github.com/{{ network[1] }}" title="GitHub">
+    <a href="https://github.com/vuvietnguyenit" title="GitHub">
       <span class="fa-stack fa-lg" aria-hidden="true">
         <i class="fas fa-circle fa-stack-2x"></i>
         <i class="fab fa-github fa-stack-1x fa-inverse"></i>
@@ -29,7 +29,7 @@
 
   {%- if network[0] == "linkedin" -%}
   <li class="list-inline-item">
-    <a href="https://linkedin.com/in/{{ network[1] }}" title="LinkedIn">
+    <a href="https://linkedin.com/in/vunguyen1407/" title="LinkedIn">
       <span class="fa-stack fa-lg" aria-hidden="true">
         <i class="fas fa-circle fa-stack-2x"></i>
         <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
