--- a/_includes/social-networks-links.html
+++ b/_includes/social-networks-links.html
@@ -5,7 +5,7 @@
 
   {%- if network[0] == "facebook" -%}
   <li class="list-inline-item">
-    <a href="https://www.facebook.com/" title="Facebook">
+    <a href="https://www.facebook.com/nguyenviet.vu.927/" title="Facebook">
       <span class="fa-stack fa-lg" aria-hidden="true">
         <i class="fas fa-circle fa-stack-2x"></i>
         <i class="fab fa-facebook fa-stack-1x fa-inverse"></i>
